--- a/Health_RL_cheXpert.ipynb
+++ b/Health_RL_cheXpert.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ACTOR-CRITIC LEARNING ALGORITHM (ACLA) FOR RADIOLOGIES OF CHESTS CLASSIFICATION INTO 14 CLUSTERS\n",
+    "# ACTOR-CRITIC LEARNING ALGORITHM (ACLA) FOR CLASSIFICATION OF CHESTS' RADIOLOGIES INTO 14 CLUSTERS\n",
     "\n",
     "- Importing packages\n",
     "- creating the actor and critic neural networks\n",
